--- a/ProjectJam/Packages/manifest.json
+++ b/ProjectJam/Packages/manifest.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
+    "com.barthaszabolcs.common-utility": "https://github.com/BarthaSzabolcs/UnityPackage-CommonUtility.git",
+    "com.barthaszabolcs.richtexthelper": "https://github.com/BarthaSzabolcs/UnityPackage-RichTextHelper.git",
     "com.unity.2d.animation": "5.0.4",
     "com.unity.2d.pixel-perfect": "4.0.1",
     "com.unity.2d.psdimporter": "4.0.2",
@@ -13,6 +15,7 @@
     "com.unity.test-framework": "1.1.22",
     "com.unity.textmeshpro": "3.0.1",
     "com.unity.timeline": "1.4.6",
+    "com.unity.toolchain.win-x86_64-linux-x86_64": "0.1.19-preview",
     "com.unity.ugui": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
